--- a/GraphDataLayer/GraphDataLayer.csproj
+++ b/GraphDataLayer/GraphDataLayer.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="AdjacencyListGraph.cs" />
     <Compile Include="ArrayExtensions.cs" />
+    <Compile Include="GraphMock.cs" />
     <Compile Include="IGraph.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
