Добавил метод расширения для LINQ, который ищет индексы в столбце согласно предикату

--- a/GraphAlgorithms/GraphAlgorithms.csproj
+++ b/GraphAlgorithms/GraphAlgorithms.csproj
@@ -45,6 +45,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CyclesFinder.cs" />
+    <Compile Include="LinqExtension.cs" />
+    <Compile Include="Tests\LinqExtensionTester.cs" />
     <Compile Include="StartingSeparator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\CyclesFinderTester.cs" />
