--- a/GraphAlgorithms/GraphAlgorithms.csproj
+++ b/GraphAlgorithms/GraphAlgorithms.csproj
@@ -46,11 +46,13 @@
   <ItemGroup>
     <Compile Include="CyclesSearcher.cs" />
     <Compile Include="LinqExtension.cs" />
+    <Compile Include="SegmentAnalyzer.cs" />
     <Compile Include="Tests\LinqExtensionTester.cs" />
     <Compile Include="SearchCyclesIterator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\CyclesSearcherTester.cs" />
     <Compile Include="Tests\SearchCyclesIteratorTester.cs" />
+    <Compile Include="Tests\SegmentAnalyzerTester.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
