--- a/GraphAlgorithms/GraphAlgorithms.csproj
+++ b/GraphAlgorithms/GraphAlgorithms.csproj
@@ -44,11 +44,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CycleComparer.cs" />
     <Compile Include="CyclesSearcher.cs" />
     <Compile Include="GraphIterator.cs" />
     <Compile Include="GraphIteratorEventArgs.cs" />
     <Compile Include="LinqExtension.cs" />
     <Compile Include="SegmentAnalyzer.cs" />
+    <Compile Include="Tests\CycleComparerTester.cs" />
     <Compile Include="Tests\LinqExtensionTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\CyclesSearcherTester.cs" />
