--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlgorithmsTests\CycleComparerTester.cs" />
+    <Compile Include="AlgorithmsTests\CyclesSearcherTester.cs" />
     <Compile Include="DataLayerTests\GraphTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -51,6 +53,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\GraphAlgorithms\GraphAlgorithms.csproj">
+      <Project>{9532EBF7-2B2F-41BF-B1E7-0757EAFAB62E}</Project>
+      <Name>GraphAlgorithms</Name>
+    </ProjectReference>
     <ProjectReference Include="..\GraphDataLayer\GraphDataLayer.csproj">
       <Project>{c9ea996e-cc78-4e44-887f-c6125d35267f}</Project>
       <Name>GraphDataLayer</Name>
