--- a/GraphAlgorithms/GraphAlgorithms.csproj
+++ b/GraphAlgorithms/GraphAlgorithms.csproj
@@ -46,7 +46,9 @@
   <ItemGroup>
     <Compile Include="CycleComparer.cs" />
     <Compile Include="CyclesSearcher.cs" />
-    <Compile Include="Geometry\Rectangle.cs" />
+    <Compile Include="ForceVerticesLocator.cs" />
+    <Compile Include="Geometry\Point.cs" />
+    <Compile Include="Geometry\Size.cs" />
     <Compile Include="Geometry\Vector.cs" />
     <Compile Include="GraphIterator.cs" />
     <Compile Include="INode.cs" />
