--- a/GraphAlgorithms/GraphAlgorithms.csproj
+++ b/GraphAlgorithms/GraphAlgorithms.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Geometry\Point.cs" />
     <Compile Include="Geometry\Size.cs" />
     <Compile Include="Geometry\Vector.cs" />
+    <Compile Include="GraphExtension.cs" />
     <Compile Include="GraphIterator.cs" />
     <Compile Include="IVerticesLocator.cs" />
     <Compile Include="LinqExtension.cs" />
