--- a/GraphAlgorithms/GraphAlgorithms.csproj
+++ b/GraphAlgorithms/GraphAlgorithms.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ClusteringCoefficient.cs" />
     <Compile Include="CycleComparer.cs" />
     <Compile Include="CyclesSearcher.cs" />
+    <Compile Include="PathSearcher.cs" />
     <Compile Include="VerticeLocation\ForceVerticesLocator.cs" />
     <Compile Include="VerticeLocation\Geometry\Point.cs" />
     <Compile Include="VerticeLocation\Geometry\Size.cs" />
