--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -47,6 +47,7 @@
     <Compile Include="AlgorithmsTests\ClusteringCoefficientTests.cs" />
     <Compile Include="AlgorithmsTests\CycleComparerTester.cs" />
     <Compile Include="AlgorithmsTests\CyclesSearcherTester.cs" />
+    <Compile Include="AlgorithmsTests\PathSearcherTester.cs" />
     <Compile Include="DataLayerTests\DictonaryGraphTester.cs" />
     <Compile Include="DataLayerTests\GraphTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
