Поменял IGraph на абстрактный класс. Добавил имена вершин.

--- a/GraphDataLayer/GraphDataLayer.csproj
+++ b/GraphDataLayer/GraphDataLayer.csproj
@@ -48,7 +48,7 @@
     <Compile Include="DictionaryGraph.cs" />
     <Compile Include="AdjacencyListGraph.cs" />
     <Compile Include="ExcelImporter.cs" />
-    <Compile Include="IGraph.cs" />
+    <Compile Include="Graph.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
