Много изменений в архитектуре

--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -65,6 +65,9 @@
     <Compile Include="Infrastructure\Command.cs" />
     <Compile Include="Converters\CycleToStringConverter.cs" />
     <Compile Include="Infrastructure\CommandEventBinder.cs" />
+    <Compile Include="Infrastructure\Navigator.cs" />
+    <Compile Include="Infrastructure\ViewModel.cs" />
+    <Compile Include="Models\GraphInfo.cs" />
     <Compile Include="ViewModels\AppViewModel.cs" />
     <Compile Include="ViewModels\CycleSelectionViewModel.cs" />
     <Compile Include="ViewModels\GraphInformationViewModel.cs" />
