Внеший вид меню переделан

--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -112,6 +112,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Resources\GraphBrushes.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Resources\RadiusMenuItemStyle.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Infrastructure\NodeStatus.cs" />
@@ -153,7 +161,22 @@
       <Name>GraphDataLayer</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Resources\Images\cycle.png" />
+    <Resource Include="Resources\Images\excel.png" />
+    <Resource Include="Resources\Images\path.png" />
+    <Resource Include="Resources\Images\refresh.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\close.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\close_w.png" />
+    <Resource Include="Resources\Images\cycle_w.png" />
+    <Resource Include="Resources\Images\excel_w.png" />
+    <Resource Include="Resources\Images\path_w.png" />
+    <Resource Include="Resources\Images\refresh_w.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
