--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -47,6 +47,7 @@
     <Compile Include="AlgorithmsTests\ClusteringCoefficientTests.cs" />
     <Compile Include="AlgorithmsTests\CycleComparerTester.cs" />
     <Compile Include="AlgorithmsTests\CyclesSearcherTester.cs" />
+    <Compile Include="AlgorithmsTests\DegreeCentralityTests.cs" />
     <Compile Include="DataLayerTests\ExcelImporterTests.cs" />
     <Compile Include="DataLayerTests\ExcelReaderTests.cs" />
     <Compile Include="AlgorithmsTests\PathSearcherTester.cs" />
