--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -82,6 +82,9 @@
     <None Include="TestSamples\incidence-and-adjacency.xlsx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="TestSamples\named-graph.xlsx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GraphAlgorithms\GraphAlgorithms.csproj">
