--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -191,6 +191,12 @@
   <ItemGroup>
     <Folder Include="Models\" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\logo_64.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\TechNetwork.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
